--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -7,8 +7,8 @@
       <tr>
 	<td style="vertical-align:top">
           <table>
-            <%= render "schBox", arr: @schedule[0] %>
-            <%= render "schBox", arr: @schedule[1] %>
+            <%= render "schBox", sec: @schedule[0] %>
+            <%= render "schBox", sec: @schedule[1] %>
             <tr class="auxiliary">
               <td>
                 <div style="height:30px; overflow:hidden">
@@ -19,11 +19,11 @@
                 </div>
               </td>
             </tr>
-            <%= render "schBox", arr: @schedule[2] %>
-            <%= render "schBox", arr: @schedule[3] %>
-            <%= render "schBox", arr: @schedule[4] %>
-            <%= render "schBox", arr: @schedule[5] %>
-            <%= render "schBox", arr: @schedule[6] %>
+            <%= render "schBox", sec: @schedule[2] %>
+            <%= render "schBox", sec: @schedule[3] %>
+            <%= render "schBox", sec: @schedule[4] %>
+            <%= render "schBox", sec: @schedule[5] %>
+            <%= render "schBox", sec: @schedule[6] %>
             <tr class="auxiliary">
               <td>
                 <div style="height:15px; overflow:hidden">
@@ -31,14 +31,14 @@
                 </div>
               </td>
             </tr>
-            <%= render "schBox", arr: @schedule[7] %>
-            <%= render "schBox", arr: @schedule[8] %>
+            <%= render "schBox", sec: @schedule[7] %>
+            <%= render "schBox", sec: @schedule[8] %>
           </table>
         </td>
         <td style="vertical-align:top">
           <table>
-            <%= render "schBox", arr: @schedule[9] %>
-            <%= render "schBox", arr: @schedule[10] %>
+            <%= render "schBox", sec: @schedule[9] %>
+            <%= render "schBox", sec: @schedule[10] %>
             <tr class="auxiliary">
               <td>
                 <div style="height:30px; overflow:hidden">
@@ -49,11 +49,11 @@
                 </div>
               </td>
             </tr>
-            <%= render "schBox", arr: @schedule[11] %>
-            <%= render "schBox", arr: @schedule[12] %>
-            <%= render "schBox", arr: @schedule[13] %>
-            <%= render "schBox", arr: @schedule[14] %>
-            <%= render "schBox", arr: @schedule[15] %>
+            <%= render "schBox", sec: @schedule[11] %>
+            <%= render "schBox", sec: @schedule[12] %>
+            <%= render "schBox", sec: @schedule[13] %>
+            <%= render "schBox", sec: @schedule[14] %>
+            <%= render "schBox", sec: @schedule[15] %>
             <tr class="auxiliary">
               <td>
                 <div style="height:15px; overflow:hidden">
@@ -61,16 +61,16 @@
                 </div>
               </td>
             </tr>
-            <%= render "schBox", arr: @schedule[16] %>
-            <%= render "schBox", arr: @schedule[17] %>
+            <%= render "schBox", sec: @schedule[16] %>
+            <%= render "schBox", sec: @schedule[17] %>
           </table>
         </td>
         <td style="vertical-align:top">
           <table>
-            <%= render "schBox", arr: @schedule[18] %>
-            <%= render "schBox", arr: @schedule[19] %>
-            <%= render "schBox", arr: @schedule[20] %>
-            <%= render "schBox", arr: @schedule[21] %>
+            <%= render "schBox", sec: @schedule[18] %>
+            <%= render "schBox", sec: @schedule[19] %>
+            <%= render "schBox", sec: @schedule[20] %>
+            <%= render "schBox", sec: @schedule[21] %>
             <tr class="auxiliary">
               <td>
                 <div style="height:80px; overflow:hidden">
@@ -81,8 +81,8 @@
                 </div>
               </td>
             </tr>
-            <%= render "schBox", arr: @schedule[22] %>
-            <%= render "schBox", arr: @schedule[23] %>
+            <%= render "schBox", sec: @schedule[22] %>
+            <%= render "schBox", sec: @schedule[23] %>
           </table>
         </td>
         <td style="vertical-align:top">
@@ -97,8 +97,8 @@
                 </div>
               </td>
             </tr>
-            <%= render "schBox", arr: @schedule[24] %>
-            <%= render "schBox", arr: @schedule[25] %>
+            <%= render "schBox", sec: @schedule[24] %>
+            <%= render "schBox", sec: @schedule[25] %>
             <tr class="auxiliary">
               <td>
                 <div style="height:30px; overflow:hidden">
@@ -109,12 +109,12 @@
                 </div>
               </td>
             </tr>
-            <%= render "schBox", arr: @schedule[26] %>
-            <%= render "schBox", arr: @schedule[27] %>
-            <%= render "schBox", arr: @schedule[28] %>
-            <%= render "schBox", arr: @schedule[29] %>
-            <%= render "schBox", arr: @schedule[30] %>
-            <%= render "schBox", arr: @schedule[31] %>
+            <%= render "schBox", sec: @schedule[26] %>
+            <%= render "schBox", sec: @schedule[27] %>
+            <%= render "schBox", sec: @schedule[28] %>
+            <%= render "schBox", sec: @schedule[29] %>
+            <%= render "schBox", sec: @schedule[30] %>
+            <%= render "schBox", sec: @schedule[31] %>
             <tr class="auxiliary">
               <td>
                 <div style="height:15px; overflow:hidden">
@@ -122,14 +122,14 @@
                 </div>
               </td>
             </tr>
-            <%= render "schBox", arr: @schedule[32] %>
-            <%= render "schBox", arr: @schedule[33] %>
+            <%= render "schBox", sec: @schedule[32] %>
+            <%= render "schBox", sec: @schedule[33] %>
           </table>
         </td>
         <td style="vertical-align:top">
           <table>
-            <%= render "schBox", arr: @schedule[34] %>
-            <%= render "schBox", arr: @schedule[35] %>
+            <%= render "schBox", sec: @schedule[34] %>
+            <%= render "schBox", sec: @schedule[35] %>
             <tr class="auxiliary">
               <td>
                 <div style="height:30px; overflow:hidden">
@@ -140,11 +140,11 @@
                 </div>
               </td>
             </tr>
-            <%= render "schBox", arr: @schedule[36] %>
-            <%= render "schBox", arr: @schedule[37] %>
-            <%= render "schBox", arr: @schedule[38] %>
-            <%= render "schBox", arr: @schedule[39] %>
-            <%= render "schBox", arr: @schedule[40] %>
+            <%= render "schBox", sec: @schedule[36] %>
+            <%= render "schBox", sec: @schedule[37] %>
+            <%= render "schBox", sec: @schedule[38] %>
+            <%= render "schBox", sec: @schedule[39] %>
+            <%= render "schBox", sec: @schedule[40] %>
             <tr class="auxiliary">
               <td>
                 <div style="height:15px; overflow:hidden">
@@ -152,8 +152,8 @@
                 </div>
               </td>
             </tr>
-            <%= render "schBox", arr: @schedule[41] %>
-            <%= render "schBox", arr: @schedule[42] %>
+            <%= render "schBox", sec: @schedule[41] %>
+            <%= render "schBox", sec: @schedule[42] %>
           </table>
         </td>
       </tr>
