--- a/app/views/commitments/_commitment.html.erb
+++ b/app/views/commitments/_commitment.html.erb
@@ -1,6 +1,17 @@
-<h3><%= commitment_string(@commitment) %></h3>
-
-<% @students.each do |s| %>
-<p><%= render s %></p>
-<% end %>
+<h3><%= @commitment.title %></h3>
+<%= @commitment.name.gsub(/(.+)-\d+/, '\1') %>-<%= @commitment.name.gsub(/.+-(\d+)/, '\1') %><br>
+<%= @commitment.teacher_name %><br>
+<%= @commitment.students.count %> students<br><br>
+<table class="table table-striped table-condensed">
+  <tr>
+    <th>Name</th>
+    <th>Year</th>
+  </tr>
+  <% @students.each do |s| %>
+    <tr>
+      <td><%= link_to s.full_name, s %></td>
+      <td><%= s.grad_year %></td>
+    </tr>
+  <% end %>
+</table>
 <%= paginate @students, remote: true %>
