Minor cosmetic change to searching

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,9 +2,9 @@
 <h1>Search Results</h1>
 
 <ul id="tabPane" class="nav nav-tabs">
-  <li class="active"><a href="#students">Students</a></li>
-  <li><a href="#teachers">Teachers</a></li>
-  <li><a href="#courses">Courses</a></li>
+  <li class="active"><a href="#students">Students (<%= @students_count %>)</a></li>
+  <li><a href="#teachers">Teachers (<%= @teachers_count %>)</a></li>
+  <li><a href="#courses">Courses (<%= @courses_count %>)</a></li>
 </ul>
 
 <div id="tabPaneContent" class="tab-content">
