--- a/app/views/students/show_png.html.erb
+++ b/app/views/students/show_png.html.erb
@@ -1,4 +1,5 @@
 <br>
+<% @schedule = create_schedule_view(@student) %>
 <div class="schedule">
   <table class="schCol table-condensed; border:none" width="100%">
     <tr>
