--- a/app/views/commitments/_commitment.html.erb
+++ b/app/views/commitments/_commitment.html.erb
@@ -1,7 +1,7 @@
 <h3><%= @commitment.title %></h3>
 <%= @commitment.name.gsub(/(.+)-\d+/, '\1') %>-<%= @commitment.name.gsub(/.+-(\d+)/, '\1') %><br>
 <%= @commitment.teacher_name %><br>
-<%= @commitment.students.count %> students<br><br>
+<%= @students.total_count %> students<br><br>
 <table class="table table-striped table-condensed">
   <tr>
     <th>Name</th>
