Added name to footer.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <b>Schedule Search</b> by Jamie Bloxham and Jake Herman
+    <b>Schedule Search</b> by Jamie Bloxham and Jake Herman.  Maintained by Rudd Fawcett.
   </small>
   <nav>
     <ul>
