Fixed contact page for clarity, and also to update ownership

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,8 @@
 <% provide :title, "About" %>
 <h2>About PA Schedule Search</h2>
 
-<p> This website is based off of an original application developed by Clifford Ressel, Jake Herman, and Jamie Bloxham in summer 2013 which produced a list of rosters for all classes in the school. Due to concerns that potentially anyone, even parties unaffiliated with Phillips Academy, would be able to access it, the output file of this program was never publicly posted until a similar program was developed by a third party that produced an identical roster file. </p>
+<p>This website is based off of an original application developed by Clifford Ressel, Jake Herman, and Jamie Bloxham in summer 2013 which produced a list of rosters for all classes in the school. Due to concerns that potentially anyone, even parties unaffiliated with Phillips Academy, would be able to access it, the output file of this program was never publicly posted until a similar program was developed by a third party that produced an identical roster file. </p>
 
-<p> This website was developed by Jake Herman and Jamie Bloxham to provide a secure, user-friendly method by which students can view their schedules and class rosters. If you have any questions about this program, feel free to contact either one of us via our Andover emails. </p>
+<p>This website was developed by Jake Herman and Jamie Bloxham to provide a secure, user-friendly method by which students can view their schedules and class rosters. <strike>If you have any questions about this program, feel free to contact either one of us via our Andover emails.</strike></p>
+
+<p><b>As of Fall 2015, this website is now maintained by Rudd Fawcett.  If you have any questions, concerns, or bug reports, please email him directly using his Andover email.</b></p> 
