Spice it up a bit

--- a/app/assets/stylesheets/search.css.scss
+++ b/app/assets/stylesheets/search.css.scss
@@ -12,7 +12,7 @@
 .tt-dropdown-menu {
     width: 422px;
     margin-top: 12px;
-    padding: 8px 0;
+    padding: 8px 15px;
     background-color: #fff;
     border: 1px solid #ccc;
     border: 1px solid rgba(0, 0, 0, 0.2);
@@ -22,6 +22,7 @@
     -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
     box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    color: black;
 }
 
 .tt-suggestion {
