--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,17 +2,17 @@
 
 footer {
   margin-top: 45px;
-  padding-top: 5px;
+  padding: 5px 10px 0 10px;
   border-top: 1px solid #eaeaea;
-  color: #999;
+  color: white;
 }
 
 footer a {
-  color: #555;
+  color: white;
 }
 
 footer a:hover {
-  color: #222;
+  color: white;
 }
 
 footer small {
